Fix Spring CORS for udhrp.live origins